почти готова регестрация
почти сделал регистрацию и еще красивый чекбокс ) для регистрации осталосб только сделать проверку на повторения данных и чтобы брались даные из формы

--- a/tests/typing_test.html
+++ b/tests/typing_test.html
@@ -1,6 +1,6 @@
 <head>
     <title> Some Title</title>
-    <script src="jquery.js"></script>
+    <script src="../jquery.js"></script>
     <script src="clicksMonitor.js"></script>
 </head>
 <body>
